# PySPL

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py  eventstats_usage.py  sales_analytics.py  stats_as_syntax.py  stdev_usage.py  web_logs.py
pyspl/: __init__.py  executor.py  parser.py  subsearch.py  utils.py
pyspl/commands/: __init__.py  eval.py  fields.py  search.py  sort.py  stats.py
tests/: __init__.py  test_eval.py  test_eventstats.py  test_fields.py  test_integration.py  test_search.py  test_sort.py  test_stats.py  test_stats_as_syntax.py  test_stdev.py  test_subsearch.py  test_where_field_comparisons.py
