[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspl"
dynamic = ["version"]
description = "A Python library for running Splunk SPL queries against Python dictionaries"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "PySPL Contributors"}
]
keywords = ["splunk", "spl", "query", "search", "analytics", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/infosecB/PySPL"
"Bug Reports" = "https://github.com/infosecB/PySPL/issues"
"Source" = "https://github.com/infosecB/PySPL"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.setuptools.dynamic]
version = {attr = "pyspl.__version__"}
